<resources>
    <string name="app_name">TORGuide</string>
    <string name="ms_world">World</string>
    <string name="ms_combat">Combat</string>
    <string name="ms_storm_knight">Storm Knight</string>
    <string name="ms_other">Other</string>
    <string name="ws_title">World</string>
    <string name="ws_cosms">Cosms</string>
    <string name="ws_world_map">World Map</string>
    <string name="ws_axioms">Axioms</string>
    <string name="ws_zones">Zones</string>
    <string name="ws_contradictions">Contradictions</string>
    <string name="cs_drama_deck">Drama Deck</string>
    <string name="cs_destiny_cards">Destiny Cards</string>
    <string name="cs_cosm_cards">Cosm Cards</string>
    <string name="cs_actions">Actions</string>
    <string name="cs_damage">Damage</string>
    <string name="cs_other_actions">Other Actions</string>
</resources>
