<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gaunt_man1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mashapps.torguide.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/ms_combat_btn"
        android:layout_width="395dp"
        android:layout_height="65dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/buttonshape1"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/ms_combat"
        android:textAlignment="center"
        android:textColor="#5a595b"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/ms_combat" />

    <Button
        android:id="@+id/ms_storm_knight_btn"
        android:layout_width="395dp"
        android:layout_height="65dp"
        android:layout_marginBottom="97dp"
        android:background="@drawable/buttonshape2"
        android:maxLines="1"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/ms_storm_knight"
        android:textAlignment="center"
        android:textColor="#5a595b"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/ms_storm_knight" />

    <Button
        android:id="@+id/ms_other_btn"
        android:layout_width="395dp"
        android:layout_height="65dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/buttonshape3"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/ms_other"
        android:textAlignment="center"
        android:textColor="#5a595b"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/ms_other" />

    <Button
        android:id="@+id/ms_world_btn"
        android:layout_width="395dp"
        android:layout_height="65dp"
        android:layout_marginBottom="225dp"
        android:background="@drawable/buttonshape"
        android:onClick="goWorld"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="9"
        android:text="@string/ms_world"
        android:textAlignment="center"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/ms_world" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="113dp"
        app:srcCompat="@drawable/ms_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />


</android.support.constraint.ConstraintLayout>


